@startuml
class com.packagenemo.scrabble_plus.jeu.ui.BanqueImages {
~ String path
~ Resources mRessource
+ <<Create>> BanqueImages(Resources,String)
+ Bitmap convertCaseToBitmap(Case,int,int)
+ Bitmap convertLettreToBitmap(Lettre,int,int)
}
class com.packagenemo.scrabble_plus.jeu.ui.JeuView {
- Thread thread
- BanqueImages mBanqueImages
- boolean isPlaying
- Partie mPartie
- PlateauView mPlateauView
- MainJoueurView mMainJoueurView
- {static} int TEMPS_REFRESH
~ int mPosX
~ int mDeltaX
+ <<Create>> JeuView(Context,AttributeSet)
+ void run()
- void update()
- void draw()
- void sleep()
+ void resume()
+ void pause()
+ boolean onTouchEvent(MotionEvent)
+ void surfaceCreated(SurfaceHolder)
+ void surfaceChanged(SurfaceHolder,int,int,int)
+ void surfaceDestroyed(SurfaceHolder)
+ BanqueImages getBanqueImages()
+ Partie getPartie()
}
class com.packagenemo.scrabble_plus.jeu.ui.PlateauView {
- JeuView mJeuView
- Plateau mPlateau
~ int mLeft
+ <<Create>> PlateauView(JeuView,int,int,int,int)
+ void onTouchEvent(MotionEvent)
- boolean touchIsOnView()
- Position convertisseurCoordonneesPlateau(MotionEvent)
- void transmissionDeLaCommande(Position)
+ void draw(Canvas)
}
class com.packagenemo.scrabble_plus.jeu.ui.JeuActivity {
~ JeuView mJeuView
# void onCreate(Bundle)
# void onPause()
# void onResume()
}
class com.packagenemo.scrabble_plus.jeu.ui.MainJoueurView {
- JeuView mJeuView
- MainJoueur mMainJoueur
~ int mLeft
+ <<Create>> MainJoueurView(JeuView,int,int,int,int)
+ void onTouchEvent(MotionEvent)
- boolean touchIsOnView()
- Position convertisseurCoordonneesMain(MotionEvent)
- void transmissionDeLaCommande(Position)
+ void draw(Canvas)
}


com.packagenemo.scrabble_plus.jeu.ui.Runnable <|.. com.packagenemo.scrabble_plus.jeu.ui.JeuView
com.packagenemo.scrabble_plus.jeu.ui.Callback <|.. com.packagenemo.scrabble_plus.jeu.ui.JeuView
android.view.SurfaceView <|-- com.packagenemo.scrabble_plus.jeu.ui.JeuView
androidx.appcompat.app.AppCompatActivity <|-- com.packagenemo.scrabble_plus.jeu.ui.JeuActivity
@enduml